care/force-app/main/default/objects/Composer_Service__c/Composer_Service__c.object-meta.xml
<CustomObject>
    <description>Identifies the vertical and license level for a service provider</description>
    <label>Composer Service</label>
    <nameField>
        <displayFormat>CCS-{00}</displayFormat>
        <label>Composer Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Composer Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>