care/force-app/main/default/objects/Composer_Service__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this service active and available to be selected in the composer?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>