care/force-app/main/default/objects/Composer_Service__c/fields/Base_Points__c.field-meta.xml
<CustomField>
    <fullName>Base_Points__c</fullName>
    <description>Base Points to be used in Contract Composer for compensation calculation</description>
    <label>Base Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>