care/force-app/main/default/objects/Composer_Service__c/fields/Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Points__c</fullName>
    <description>Bonus Points</description>
    <label>Bonus Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>