care/force-app/main/default/objects/Composer_Service__c/fields/Cost_per_Lead_Info__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Lead_Info__c</fullName>
    <description>Cost per Lead Info, hand populated and displayed in contract composer</description>
    <label>Cost per Lead Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>