care/force-app/main/default/objects/Composer_Service__c/fields/Custom_Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Custom_Bonus_Points__c</fullName>
    <description>Custom Bonus Points</description>
    <label>Custom Bonus Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>