care/force-app/main/default/objects/Composer_Service__c/fields/Extra_Location_Base_Cap__c.field-meta.xml
<CustomField>
    <fullName>Extra_Location_Base_Cap__c</fullName>
    <description>The maximum number of locations that can be added before additional base points are no longer tallied</description>
    <label>Extra Location Base Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>