care/force-app/main/default/objects/Composer_Service__c/fields/Extra_Location_Base_Points__c.field-meta.xml
<CustomField>
    <fullName>Extra_Location_Base_Points__c</fullName>
    <description>Extra base points earned for each location beyond the first</description>
    <label>Extra Location Base Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>