care/force-app/main/default/objects/Composer_Service__c/fields/Flat_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Amount__c</fullName>
    <description>Value for Child Care Flat rate, other values are ignored in the case of Child Care Flat Rate</description>
    <label>Flat Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>