care/force-app/main/default/objects/Composer_Service__c/fields/Flat_Rate_Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Bonus_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of bonus points for any flat rate service</description>
    <label>Flat Rate Bonus Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>