care/force-app/main/default/objects/Composer_Service__c/fields/License_Level__c.field-meta.xml
<CustomField>
    <fullName>License_Level__c</fullName>
    <description>License level of the vertical being serviced, or Category</description>
    <label>License Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centers</fullName>
            </value>
            <value>
                <fullName>Nanny Agencies</fullName>
            </value>
            <value>
                <fullName>FCCs</fullName>
            </value>
            <value>
                <fullName>Camps</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Adult Day Care</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Camps &amp; Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>