care/force-app/main/default/objects/Composer_Service__c/fields/Service_Specific_Fields__c.field-meta.xml
<CustomField>
    <fullName>Service_Specific_Fields__c</fullName>
    <description>Which fields on Opportunity Service Area should be displayed on the Vetting tab?  API names, comma seperated.</description>
    <label>Service Specific Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>