care/force-app/main/default/objects/Composer_Service__c/fields/Show_Age_Range_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Age_Range_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Age Range Field</label>
    <type>Checkbox</type>
</CustomField>