care/force-app/main/default/objects/Composer_Service__c/fields/Show_Care_Types__c.field-meta.xml
<CustomField>
    <fullName>Show_Care_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Care Types</label>
    <type>Checkbox</type>
</CustomField>