care/force-app/main/default/objects/Composer_Service__c/fields/Show_License_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_License_Number_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show License Number Field</label>
    <type>Checkbox</type>
</CustomField>