care/force-app/main/default/objects/Composer_Service__c/fields/Tier_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Amount__c</fullName>
    <description>Tier 1 Amount</description>
    <label>Tier 1 Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>