care/force-app/main/default/objects/Composer_Service__c/fields/Tier_1_Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Bonus_Points__c</fullName>
    <description>Tier 1 Bonus Points</description>
    <label>Tier 1 Bonus Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>