care/force-app/main/default/objects/Composer_Service__c/fields/Tier_Custom_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Tier_Custom_Threshold__c</fullName>
    <description>Tier Custom Threshold</description>
    <label>Tier Custom Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>