care/force-app/main/default/objects/Composer_Service__c/fields/Tuition_Discount_Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Discount_Bonus_Points__c</fullName>
    <description>The number of bonus points given to the sales rep if a tuition discount is added to the location.</description>
    <label>Tuition Discount Bonus Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>