care/force-app/main/default/objects/Composer_Service__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Vertical name, or Category Group</description>
    <label>Vertical</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Childcare Flat Rate</fullName>
            </value>
            <value>
                <fullName>Recruiting Solutions</fullName>
            </value>
            <value>
                <fullName>Senior Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>