care/force-app/main/default/objects/Composer_Service__c/fields/Vetting_Type__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Type__c</fullName>
    <description>What type of vetting is done on this service?</description>
    <label>Vetting Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
                <default>true</default>
                <label>License</label>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>