care/force-app/main/default/objects/Composer_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vertical__c</columns>
    <columns>License_Level__c</columns>
    <columns>Base_Points__c</columns>
    <columns>Cost_per_Lead_Info__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>