care/force-app/main/default/objects/Composer_Service__c/listViews/Amount_View.listView-meta.xml
<ListView>
    <fullName>Amount_View</fullName>
    <columns>NAME</columns>
    <columns>Vertical__c</columns>
    <columns>License_Level__c</columns>
    <columns>Tier_1_Amount__c</columns>
    <columns>Tier_2_Amount__c</columns>
    <columns>Tier_3_Amount__c</columns>
    <columns>Tier_4_Amount__c</columns>
    <columns>Tier_5_Amount__c</columns>
    <columns>Tier_Custom_Threshold__c</columns>
    <filterScope>Mine</filterScope>
    <label>Amount View</label>
</ListView>