care/force-app/main/default/objects/Composer_Service__c/listViews/Points_View.listView-meta.xml
<ListView>
    <fullName>Points_View</fullName>
    <columns>NAME</columns>
    <columns>Vertical__c</columns>
    <columns>License_Level__c</columns>
    <columns>Base_Points__c</columns>
    <columns>Bonus_Points__c</columns>
    <columns>Tier_1_Bonus_Points__c</columns>
    <columns>Tier_2_Bonus_Points__c</columns>
    <columns>Tier_3_Bonus_Points__c</columns>
    <columns>Tier_4_Bonus_Points__c</columns>
    <columns>Tier_5_Bonus_Points__c</columns>
    <columns>Custom_Bonus_Points__c</columns>
    <columns>Extra_Location_Base_Points__c</columns>
    <columns>Extra_Location_Bonus_Points__c</columns>
    <columns>Extra_Location_Base_Cap__c</columns>
    <filterScope>Mine</filterScope>
    <label>Points View</label>
</ListView>